# dio-python

./: .editorconfig
django-python/banco-de-dados/sqlite/: conexao.py  database.db
projetos/djangotutorial/: db.sqlite3
projetos/djangotutorial/meusite/: settings.py  urls.py
projetos/pokeapi/: server.py
projetos/pokeapi/controllers/: pokemon_controller.py
projetos/pokeapi/models/: pokemon.py
projetos/pokeapi/services/: api.py  api.py.backup
projetos/pokeapi/utils/: http_utils.py
projetos/pokeapi/views/: pokemon_view.py
python-backend/banco-de-dados/consultas/: conexao.py
python-backend/banco-de-dados/injecao-sql/: database.db  injecao_sql.py
python-backend/banco-de-dados/operacao-lote/: conexao.py  database.db
python-backend/banco-de-dados/rollback/: rollback.py
python-backend/banco-de-dados/simples-operacao/: conexao.py  database.db
python-backend/desafios/: desafio_01.py  desafio_02.py  desafio_03.py
python-backend/django-api/diobank/: db.sqlite3  pyproject.toml
python-backend/flask-api/: thunder-collection_dio_bank.json
python-backend/flask-api/dio_bank/: diobank.sqlite  erros.txt  pyproject.toml
python-backend/flask-api/dio_bank/src/: app.py  db.py  schema.sql
python-backend/flask-api/dio_bank/src/controllers/: user.py
python-backend/flask-api/dio_bank/src/routes/: __init__.py
python-backend/flask-api/dio_bank/src/routes/user/: username.py
python-fundamentos/01-estruturas-dados/: conjuntos.py  desafio_2.py  desafio_3.py  dicionarios.py  funcoes.py  readme.md
python-fundamentos/poo-python/: 01.py
(+32 files in other folders)
