[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["João Vitor de Jesus Oliveira <contato@joaovjo.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
